--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--  Link Icons   -->
 
-    <link rel="stylesheet" href="/assets/fonts/style.css">
+    <link rel="stylesheet" href="assets/fonts/style.css">
 
  <!--  Fonts Link   -->
 
